# MVP-BlockChain

./: Cargo.toml  README.md  network.rs  rust-toolchain.toml  transaction.rs
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/blockchain/: block.rs  blockchain.rs  mod.rs  transaction.rs  utils.rs
backend/src/contract/: contract.rs  decentralization.rs  mod.rs  security.rs  transparency.rs
backend/src/network/: mod.rs  network.rs
backend/src/smart_contract/: mod.rs  smart_contract.rs
src/: block.rs  blockchain.rs  contract.rs  handle.rs  init.rs  lib.rs  main.rs  smart_contract.rs  state.rs  test_contract.wasm  utils.rs
wasm_contract/: Cargo.toml
wasm_contract/pkg/: package.json  wasm_contract.d.ts  wasm_contract.js  wasm_contract_bg.wasm.d.ts
wasm_contract/src/: lib.rs
yew_frontend/: Cargo.toml  Trunk.toml  index.html
yew_frontend/pkg/: package.json  yew_frontend_bg.wasm  yew_frontend_lib.js  yew_frontend_lib_bg.wasm
yew_frontend/src/: api.rs  lib.rs  main.rs
yew_frontend/src/components/: blockchain.rs
yew_frontend/static/: styles.css
