[package]
name = "blockchain_mvp"
version = "0.1.0"
edition = "2021"



[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
chrono = "0.4.38"
ring = "0.17.8"
wasmer = "2.1"
anyhow = "1.0.86"
scale-info = { version = "2", default-features = false }
xshell = "0.2"
parity-scale-codec = { version = "3", default-features = false }
gstd = { git = "https://github.com/gear-tech/gear", tag = "v1.1.0" }
gmeta = { git = "https://github.com/gear-tech/gear", tag = "v1.1.0" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", tag = "v1.1.0" }
gtest = { git = "https://github.com/gear-tech/gear", tag = "v1.1.0" }
gclient = { git = "https://github.com/gear-tech/gear", tag = "v1.1.0" }
warp = "0.3.7"

[lib]
name = "blockchain_mvp"
path = "src/lib.rs"


[[bin]]
name = "blockchain_mvp_bin"
path = "src/main.rs"



