[package]
name = "yew_frontend"
version = "0.1.0"
edition = "2021"




[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.92"
serde_json = "1.0.120"
web-sys = "0.3.69"
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.42"

[lib]
name = "yew_frontend_lib"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "yew_frontend_bin"
path = "src/main.rs"


